alignment fix

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -49,7 +49,7 @@
 
 .header-nav-link {
     text-decoration: none;
-    color: #333;
+    color: #fff;
     padding: 0 7px;
 }
 
