--- a/client/src/components/InputOutput.css
+++ b/client/src/components/InputOutput.css
@@ -44,6 +44,10 @@ textarea {
 	.input-wrapper, .input-wrapper {
 		border: solid rgb(132, 127, 127) 2px;
 	}
+
+	.back-btn-container {
+	display: none;
+	}
 }
 
 .input-wrapper {
@@ -99,6 +103,16 @@ textarea {
 	cursor: default;
 }
 
+.output-mini-buttons-container {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	gap: 10px;
+	padding: 30px;
+	border: solid red 2px;
+}
+
+
 .submit-btn-container {
 	display: flex;
 	flex-direction: row-reverse;
@@ -124,13 +138,18 @@ textarea {
 	scale: 1.02;
 }
 
-.back-btn-container {
+@media only screen and (max-width: 800px) {
+  .submit-btn-container {
+	padding: 20px;
+  }
+
+  .back-btn-container {
 	display: flex;
 	justify-content: flex-end;
 	padding-right: 20px;
 }
 
-.back-button {
+  .back-button {
 	padding: 10px;
 	background-color: #007bff;
 	color: #fff;
@@ -141,20 +160,7 @@ textarea {
 	height: 55px;
 	width: 55px;
 	font-size: 30px;
-}
-
-.output-mini-buttons-container {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	gap: 10px;
-	padding: 30px;
-}
-
-@media only screen and (max-width: 800px) {
-  .submit-btn-container {
-	padding: 20px;
-  }
+	}
 }
 
 /* ------------ Alternative Box ---------------------- */
